grammar.js
    source_file: $ =>
      choice($.program_definition, $.copybook_definition),

    program_definition: $ =>
      seq(
        $.identification_division,
        optional($.environment_division),
        optional($.data_division),
        optional($.procedure_division),
        optional(seq(ci('END'), ci('PROGRAM'), $._name_word, optional('.'))),
      ),

    // Copybooks: just data descriptions, no divisions required
    identification_division: $ =>
      seq(
        ci('IDENTIFICATION'),
        ci('DIVISION'),
        '.',
        $.program_id_paragraph,
        repeat(
          choice(
            $.author_paragraph,
            $.date_written_paragraph,
            $.date_compiled_paragraph,
            $.installation_paragraph,
            $.security_paragraph,
            $.remarks_paragraph,
          ),
        ),
      ),

    program_id_paragraph: $ =>
      seq(ci('PROGRAM-ID'), optional('.'), $._name_word, optional('.')),

    procedure_division: $ =>
      seq(
        ci('PROCEDURE'),
        ci('DIVISION'),
        optional($.using_clause),
        optional($.returning_clause),
        '.',
        repeat(choice($.section, $.paragraph, $.sentence)),
      ),

    paragraph: $ =>
      prec.left(seq($._name_word, '.', repeat($.sentence))),

    sentence: $ => seq(repeat1($._statement), '.'),

    // ========================================================================
    // STATEMENTS
    // ========================================================================
    _statement: $ =>
      choice(
        // Control flow
        $.if_statement,
        $.evaluate_statement,
        $.perform_statement,
        $.perform_inline,
        $.go_to_statement,
        $.goback_statement,
        $.stop_statement,
        $.exit_statement,
        $.continue_statement,
        $.next_sentence_statement,

        // Data movement
        $.move_statement,
        $.initialize_statement,
        $.set_statement,
        $.compute_statement,
        $.add_statement,
        $.subtract_statement,
        $.multiply_statement,
        $.divide_statement,

        // I/O
        $.display_statement,
        $.accept_statement,
        $.open_statement,
        $.close_statement,
        $.read_statement,
        $.write_statement,
        $.rewrite_statement,
        $.delete_statement,

        // String
        $.string_statement,
        $.unstring_statement,
        $.inspect_statement,

        // Table
        $.search_statement,
        $.sort_statement,
        $.merge_statement,
        $.release_statement,
        $.return_statement,

        // Program flow
        $.call_statement,
        $.alter_statement,

        // EXEC
        $.exec_cics_statement,
        $.exec_sql_statement,

        // COPY in procedure division
        $.copy_statement,
      ),

    // --- IF / EVALUATE: self-terminating with END-xxx ---
    if_statement: $ =>
      seq(
        ci('IF'),
        $._condition,
        optional(ci('THEN')),
        repeat($._statement),
        optional(seq(ci('ELSE'), repeat($._statement))),
        ci('END-IF'),
      ),

    evaluate_statement: $ =>
      seq(
        ci('EVALUATE'),
        $._evaluate_subject,
        repeat(seq(ci('ALSO'), $._evaluate_subject)),
        repeat1($.when_clause),
        optional(seq(ci('WHEN'), ci('OTHER'), repeat($._statement))),
        ci('END-EVALUATE'),
      ),

    _evaluate_subject: $ =>
      choice(ci('TRUE'), ci('FALSE'), $._expression),

    when_clause: $ =>
      prec.left(seq(
        ci('WHEN'),
        $._when_condition,
        repeat(seq(ci('ALSO'), $._when_condition)),
        repeat($._statement),
      )),

    _when_condition: $ =>
      choice(
        ci('ANY'),
        $._condition,
        seq($._expression, choice(ci('THRU'), ci('THROUGH')), $._expression),
      ),

    perform_statement: $ =>
      prec.left(seq(
        ci('PERFORM'),
        $._name_word,
        optional(seq(choice(ci('THRU'), ci('THROUGH')), $._name_word)),
        optional(choice(
          seq($._expression, ci('TIMES')),
          seq(optional(seq(optional(ci('WITH')), ci('TEST'),
            choice(ci('BEFORE'), ci('AFTER')))),
            ci('UNTIL'), $._condition),
          seq(ci('VARYING'), $._name_word, ci('FROM'), $._expression,
            ci('BY'), $._expression, ci('UNTIL'), $._condition),
        )),
      )),

    perform_inline: $ =>
      seq(
        ci('PERFORM'),
        choice(
          seq($._expression, ci('TIMES')),
          seq(optional(seq(optional(ci('WITH')), ci('TEST'),
            choice(ci('BEFORE'), ci('AFTER')))),
            ci('UNTIL'), $._condition),
          seq(ci('VARYING'), $._name_word, ci('FROM'), $._expression,
            ci('BY'), $._expression, ci('UNTIL'), $._condition),
        ),
        repeat($._statement),
        ci('END-PERFORM'),
      ),

    go_to_statement: $ =>
      prec.left(seq(ci('GO'), optional(ci('TO')), optional($._name_word))),

    goback_statement: $ => ci('GOBACK'),

    next_sentence_statement: $ => seq(ci('NEXT'), ci('SENTENCE')),

    // --- Data Movement ---
    move_statement: $ =>
      prec.left(seq(
        ci('MOVE'),
        optional(ci('CORRESPONDING')),
        $._expression,
        ci('TO'),
        repeat1($._expression),
      )),

    set_statement: $ =>
      prec.left(seq(
        ci('SET'),
        choice(
          seq(repeat1($._expression), ci('TO'), $._expression),
          seq($._expression, choice(ci('UP'), ci('DOWN')), ci('BY'), $._expression),
          seq(ci('ADDRESS'), ci('OF'), $._expression, ci('TO'), $._expression),
        ),
      )),

    compute_statement: $ =>
      seq(
        ci('COMPUTE'),
        repeat1(seq($._expression, optional(ci('ROUNDED')))),
        '=',
        $._expression,
        optional(ci('END-COMPUTE')),
      ),

    display_statement: $ =>
      prec.left(seq(
        ci('DISPLAY'),
        repeat1($._expression),
        optional(seq(ci('UPON'), $._name_word)),
        optional(seq(ci('WITH'), ci('NO'), ci('ADVANCING'))),
      )),

    read_statement: $ =>
      seq(
        ci('READ'),
        $._name_word,
        optional(ci('NEXT')),
        optional(ci('RECORD')),
        optional(seq(ci('INTO'), $._expression)),
        optional(seq(ci('KEY'), optional(ci('IS')), $._name_word)),
        repeat($.io_handler),
        optional(ci('END-READ')),
      ),

    call_statement: $ =>
      seq(
        ci('CALL'),
        $._expression,
        optional(seq(ci('USING'),
          repeat1(seq(
            optional(choice(
              seq(ci('BY'), ci('REFERENCE')),
              seq(ci('BY'), ci('CONTENT')),
              seq(ci('BY'), ci('VALUE')),
            )),
            $._expression,
            optional(','),
          )),
        )),
        optional(seq(ci('RETURNING'), $._expression)),
        optional(ci('END-CALL')),
      ),

    _expression: $ =>
      choice(
        $.identifier,
        $._literal,
        $._figurative_constant,
        $.function_call,
        $.address_of,
        $.length_of,
        $._parenthesized_expression,
        $._arithmetic_expression,
      ),

    identifier: $ =>
      prec.right(choice(
        seq($.qualified_identifier, $.subscript, $.subscript),
        seq($._name_word, $.subscript, $.subscript),
        seq($.qualified_identifier, $.subscript),
        seq($._name_word, $.subscript),
        $.qualified_identifier,
        $._name_word,
      )),

    _condition: $ =>
      choice(
        $._simple_condition,
        prec.left(1, seq($._condition, ci('AND'), $._condition)),
        prec.left(0, seq($._condition, ci('OR'), $._condition)),
        prec(2, seq(ci('NOT'), $._condition)),
        prec(3, seq('(', $._condition, ')')),
      ),

    string_literal: $ =>
      choice(
        $._string_literal_ext,
        /[Xx]'[0-9A-Fa-f]*'/,
        /[Xx]"[0-9A-Fa-f]*"/,
        /[Nn]'[^']*'/,
        /[Nn]"[^"]*"/,
      ),

    number_literal: $ =>
      /[+-]?[0-9]+(\.[0-9]+)?/,

    _name_word: $ => choice($.WORD, $.numeric_name),

    numeric_name: $ => /[0-9]+[a-zA-Z_-][a-zA-Z0-9_-]*/,
  },
});
